// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day Day container should display a loading gif if state.isLoading is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Day
    addSchedule={[Function]}
    addScoreboard={[Function]}
    date="2018-04-18"
    schedule={
        Array [
            Object {
              "awayTeam": Object {
                "Abbreviation": "COL",
                "City": "Colorado",
                "ID": "22",
                "Name": "Avalanche",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "NSH",
                "City": "Nashville",
                "ID": "18",
                "Name": "Predators",
              },
              "id": "45866",
              "location": "Bridgestone Arena",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "3:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "NJD",
                "City": "New Jersey",
                "ID": "7",
                "Name": "Devils",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "TBL",
                "City": "Tampa Bay",
                "ID": "1",
                "Name": "Lightning",
              },
              "id": "45875",
              "location": "Amalie Arena",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "3:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "TOR",
                "City": "Toronto",
                "ID": "12",
                "Name": "Maple Leafs",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "BOS",
                "City": "Boston",
                "ID": "11",
                "Name": "Bruins",
              },
              "id": "45874",
              "location": "TD Garden",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "8:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "SJS",
                "City": "San Jose",
                "ID": "26",
                "Name": "Sharks",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "ANA",
                "City": "Anaheim",
                "ID": "29",
                "Name": "Ducks",
              },
              "id": "45873",
              "location": "Honda Center",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "10:30PM",
            },
          ]
    }
    scoreboard={
        Array [
            Object {
              "awayScore": "5",
              "awayShots": "20",
              "game": Object {
                "ID": "45865",
                "awayTeam": Object {
                  "Abbreviation": "PHI",
                  "City": "Philadelphia",
                  "ID": "6",
                  "Name": "Flyers",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "PIT",
                  "City": "Pittsburgh",
                  "ID": "10",
                  "Name": "Penguins",
                },
                "location": "PPG Paints Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:00PM",
              },
              "homeScore": "1",
              "homeShots": "35",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "1",
                    "awayShots": "6",
                    "homeScore": "0",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "12",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "3",
                    "awayShots": "7",
                    "homeScore": "1",
                    "homeShots": "12",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "17",
              "game": Object {
                "ID": "45887",
                "awayTeam": Object {
                  "Abbreviation": "MIN",
                  "City": "Minnesota",
                  "ID": "25",
                  "Name": "Wild",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "WPJ",
                  "City": "Winnipeg",
                  "ID": "2",
                  "Name": "Jets",
                },
                "location": "Bell MTS Place",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:30PM",
              },
              "homeScore": "4",
              "homeShots": "44",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "9",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "1",
                    "awayShots": "3",
                    "homeScore": "3",
                    "homeShots": "17",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "30",
              "game": Object {
                "ID": "45872",
                "awayTeam": Object {
                  "Abbreviation": "LAK",
                  "City": "Los Angeles",
                  "ID": "28",
                  "Name": "Kings",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "VGK",
                  "City": "Vegas",
                  "ID": "142",
                  "Name": "Golden Knights",
                },
                "location": "T-Mobile Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "10:00PM",
              },
              "homeScore": "2",
              "homeShots": "56",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "0",
                    "awayShots": "8",
                    "homeScore": "0",
                    "homeShots": "9",
                  },
                  Object {
                    "@number": "4",
                    "awayScore": "0",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "5",
                    "awayScore": "0",
                    "awayShots": "3",
                    "homeScore": "1",
                    "homeShots": "9",
                  },
                ],
              },
            },
          ]
    }
    setDate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <section>
          <img
                    alt="loading"
                    className="loading-gif"
                    src="blue_loading.gif"
          />
</section>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <img
            alt="loading"
            className="loading-gif"
            src="blue_loading.gif"
/>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "loading",
            "className": "loading-gif",
            "src": "blue_loading.gif",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": "section",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <section>
            <img
                        alt="loading"
                        className="loading-gif"
                        src="blue_loading.gif"
            />
</section>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="loading"
              className="loading-gif"
              src="blue_loading.gif"
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "loading",
              "className": "loading-gif",
              "src": "blue_loading.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "section",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Day Day container should not display games if selected date length is not 10 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Day
    addSchedule={[Function]}
    addScoreboard={[Function]}
    date="2018-04"
    schedule={
        Array [
            Object {
              "dailygameschedule": Object {
                "gameentry": Array [
                  Object {
                    "awayTeam": Object {
                      "Abbreviation": "COL",
                      "City": "Colorado",
                      "ID": "22",
                      "Name": "Avalanche",
                    },
                    "date": "2018-04-14",
                    "delayedOrPostponedReason": null,
                    "homeTeam": Object {
                      "Abbreviation": "NSH",
                      "City": "Nashville",
                      "ID": "18",
                      "Name": "Predators",
                    },
                    "id": "45866",
                    "location": "Bridgestone Arena",
                    "originalDate": null,
                    "originalTime": null,
                    "scheduleStatus": "Normal",
                    "time": "3:00PM",
                  },
                  Object {
                    "awayTeam": Object {
                      "Abbreviation": "NJD",
                      "City": "New Jersey",
                      "ID": "7",
                      "Name": "Devils",
                    },
                    "date": "2018-04-14",
                    "delayedOrPostponedReason": null,
                    "homeTeam": Object {
                      "Abbreviation": "TBL",
                      "City": "Tampa Bay",
                      "ID": "1",
                      "Name": "Lightning",
                    },
                    "id": "45875",
                    "location": "Amalie Arena",
                    "originalDate": null,
                    "originalTime": null,
                    "scheduleStatus": "Normal",
                    "time": "3:00PM",
                  },
                  Object {
                    "awayTeam": Object {
                      "Abbreviation": "TOR",
                      "City": "Toronto",
                      "ID": "12",
                      "Name": "Maple Leafs",
                    },
                    "date": "2018-04-14",
                    "delayedOrPostponedReason": null,
                    "homeTeam": Object {
                      "Abbreviation": "BOS",
                      "City": "Boston",
                      "ID": "11",
                      "Name": "Bruins",
                    },
                    "id": "45874",
                    "location": "TD Garden",
                    "originalDate": null,
                    "originalTime": null,
                    "scheduleStatus": "Normal",
                    "time": "8:00PM",
                  },
                  Object {
                    "awayTeam": Object {
                      "Abbreviation": "SJS",
                      "City": "San Jose",
                      "ID": "26",
                      "Name": "Sharks",
                    },
                    "date": "2018-04-14",
                    "delayedOrPostponedReason": null,
                    "homeTeam": Object {
                      "Abbreviation": "ANA",
                      "City": "Anaheim",
                      "ID": "29",
                      "Name": "Ducks",
                    },
                    "id": "45873",
                    "location": "Honda Center",
                    "originalDate": null,
                    "originalTime": null,
                    "scheduleStatus": "Normal",
                    "time": "10:30PM",
                  },
                ],
                "lastUpdatedOn": "2018-04-12 4:24:49 PM",
              },
            },
          ]
    }
    scoreboard={
        Array [
            Object {
              "awayScore": "5",
              "awayShots": "20",
              "game": Object {
                "ID": "45865",
                "awayTeam": Object {
                  "Abbreviation": "PHI",
                  "City": "Philadelphia",
                  "ID": "6",
                  "Name": "Flyers",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "PIT",
                  "City": "Pittsburgh",
                  "ID": "10",
                  "Name": "Penguins",
                },
                "location": "PPG Paints Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:00PM",
              },
              "homeScore": "1",
              "homeShots": "35",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "1",
                    "awayShots": "6",
                    "homeScore": "0",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "12",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "3",
                    "awayShots": "7",
                    "homeScore": "1",
                    "homeShots": "12",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "17",
              "game": Object {
                "ID": "45887",
                "awayTeam": Object {
                  "Abbreviation": "MIN",
                  "City": "Minnesota",
                  "ID": "25",
                  "Name": "Wild",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "WPJ",
                  "City": "Winnipeg",
                  "ID": "2",
                  "Name": "Jets",
                },
                "location": "Bell MTS Place",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:30PM",
              },
              "homeScore": "4",
              "homeShots": "44",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "9",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "1",
                    "awayShots": "3",
                    "homeScore": "3",
                    "homeShots": "17",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "30",
              "game": Object {
                "ID": "45872",
                "awayTeam": Object {
                  "Abbreviation": "LAK",
                  "City": "Los Angeles",
                  "ID": "28",
                  "Name": "Kings",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "VGK",
                  "City": "Vegas",
                  "ID": "142",
                  "Name": "Golden Knights",
                },
                "location": "T-Mobile Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "10:00PM",
              },
              "homeScore": "2",
              "homeShots": "56",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "0",
                    "awayShots": "8",
                    "homeScore": "0",
                    "homeShots": "9",
                  },
                  Object {
                    "@number": "4",
                    "awayScore": "0",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "5",
                    "awayScore": "0",
                    "awayShots": "3",
                    "homeScore": "1",
                    "homeShots": "9",
                  },
                ],
              },
            },
          ]
    }
    setDate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="directions"
>
        Please select a day in the box above.
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Please select a day in the box above.",
        "className": "directions",
      },
      "ref": null,
      "rendered": "Please select a day in the box above.",
      "type": "div",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="directions"
>
          Please select a day in the box above.
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Please select a day in the box above.",
          "className": "directions",
        },
        "ref": null,
        "rendered": "Please select a day in the box above.",
        "type": "div",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Day Day container should not display games if selected date length is not 10 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Day
    addSchedule={[Function]}
    addScoreboard={[Function]}
    date="2018-05"
    schedule={
        Array [
            Object {
              "dailygameschedule": Object {
                "gameentry": Array [
                  Object {
                    "awayTeam": Object {
                      "Abbreviation": "COL",
                      "City": "Colorado",
                      "ID": "22",
                      "Name": "Avalanche",
                    },
                    "date": "2018-04-14",
                    "delayedOrPostponedReason": null,
                    "homeTeam": Object {
                      "Abbreviation": "NSH",
                      "City": "Nashville",
                      "ID": "18",
                      "Name": "Predators",
                    },
                    "id": "45866",
                    "location": "Bridgestone Arena",
                    "originalDate": null,
                    "originalTime": null,
                    "scheduleStatus": "Normal",
                    "time": "3:00PM",
                  },
                  Object {
                    "awayTeam": Object {
                      "Abbreviation": "NJD",
                      "City": "New Jersey",
                      "ID": "7",
                      "Name": "Devils",
                    },
                    "date": "2018-04-14",
                    "delayedOrPostponedReason": null,
                    "homeTeam": Object {
                      "Abbreviation": "TBL",
                      "City": "Tampa Bay",
                      "ID": "1",
                      "Name": "Lightning",
                    },
                    "id": "45875",
                    "location": "Amalie Arena",
                    "originalDate": null,
                    "originalTime": null,
                    "scheduleStatus": "Normal",
                    "time": "3:00PM",
                  },
                  Object {
                    "awayTeam": Object {
                      "Abbreviation": "TOR",
                      "City": "Toronto",
                      "ID": "12",
                      "Name": "Maple Leafs",
                    },
                    "date": "2018-04-14",
                    "delayedOrPostponedReason": null,
                    "homeTeam": Object {
                      "Abbreviation": "BOS",
                      "City": "Boston",
                      "ID": "11",
                      "Name": "Bruins",
                    },
                    "id": "45874",
                    "location": "TD Garden",
                    "originalDate": null,
                    "originalTime": null,
                    "scheduleStatus": "Normal",
                    "time": "8:00PM",
                  },
                  Object {
                    "awayTeam": Object {
                      "Abbreviation": "SJS",
                      "City": "San Jose",
                      "ID": "26",
                      "Name": "Sharks",
                    },
                    "date": "2018-04-14",
                    "delayedOrPostponedReason": null,
                    "homeTeam": Object {
                      "Abbreviation": "ANA",
                      "City": "Anaheim",
                      "ID": "29",
                      "Name": "Ducks",
                    },
                    "id": "45873",
                    "location": "Honda Center",
                    "originalDate": null,
                    "originalTime": null,
                    "scheduleStatus": "Normal",
                    "time": "10:30PM",
                  },
                ],
                "lastUpdatedOn": "2018-04-12 4:24:49 PM",
              },
            },
          ]
    }
    scoreboard={
        Array [
            Object {
              "awayScore": "5",
              "awayShots": "20",
              "game": Object {
                "ID": "45865",
                "awayTeam": Object {
                  "Abbreviation": "PHI",
                  "City": "Philadelphia",
                  "ID": "6",
                  "Name": "Flyers",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "PIT",
                  "City": "Pittsburgh",
                  "ID": "10",
                  "Name": "Penguins",
                },
                "location": "PPG Paints Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:00PM",
              },
              "homeScore": "1",
              "homeShots": "35",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "1",
                    "awayShots": "6",
                    "homeScore": "0",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "12",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "3",
                    "awayShots": "7",
                    "homeScore": "1",
                    "homeShots": "12",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "17",
              "game": Object {
                "ID": "45887",
                "awayTeam": Object {
                  "Abbreviation": "MIN",
                  "City": "Minnesota",
                  "ID": "25",
                  "Name": "Wild",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "WPJ",
                  "City": "Winnipeg",
                  "ID": "2",
                  "Name": "Jets",
                },
                "location": "Bell MTS Place",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:30PM",
              },
              "homeScore": "4",
              "homeShots": "44",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "9",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "1",
                    "awayShots": "3",
                    "homeScore": "3",
                    "homeShots": "17",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "30",
              "game": Object {
                "ID": "45872",
                "awayTeam": Object {
                  "Abbreviation": "LAK",
                  "City": "Los Angeles",
                  "ID": "28",
                  "Name": "Kings",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "VGK",
                  "City": "Vegas",
                  "ID": "142",
                  "Name": "Golden Knights",
                },
                "location": "T-Mobile Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "10:00PM",
              },
              "homeScore": "2",
              "homeShots": "56",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "0",
                    "awayShots": "8",
                    "homeScore": "0",
                    "homeShots": "9",
                  },
                  Object {
                    "@number": "4",
                    "awayScore": "0",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "5",
                    "awayScore": "0",
                    "awayShots": "3",
                    "homeScore": "1",
                    "homeShots": "9",
                  },
                ],
              },
            },
          ]
    }
    setDate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="directions"
>
        Please select a day in the box above.
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Please select a day in the box above.",
        "className": "directions",
      },
      "ref": null,
      "rendered": "Please select a day in the box above.",
      "type": "div",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="directions"
>
          Please select a day in the box above.
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Please select a day in the box above.",
          "className": "directions",
        },
        "ref": null,
        "rendered": "Please select a day in the box above.",
        "type": "div",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Day Day container should not display schedule if there are no games on day 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Day
    addSchedule={[Function]}
    addScoreboard={[Function]}
    date="2018-04-12"
    schedule={
        Array [
            Object {
              "awayTeam": Object {
                "Abbreviation": "COL",
                "City": "Colorado",
                "ID": "22",
                "Name": "Avalanche",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "NSH",
                "City": "Nashville",
                "ID": "18",
                "Name": "Predators",
              },
              "id": "45866",
              "location": "Bridgestone Arena",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "3:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "NJD",
                "City": "New Jersey",
                "ID": "7",
                "Name": "Devils",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "TBL",
                "City": "Tampa Bay",
                "ID": "1",
                "Name": "Lightning",
              },
              "id": "45875",
              "location": "Amalie Arena",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "3:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "TOR",
                "City": "Toronto",
                "ID": "12",
                "Name": "Maple Leafs",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "BOS",
                "City": "Boston",
                "ID": "11",
                "Name": "Bruins",
              },
              "id": "45874",
              "location": "TD Garden",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "8:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "SJS",
                "City": "San Jose",
                "ID": "26",
                "Name": "Sharks",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "ANA",
                "City": "Anaheim",
                "ID": "29",
                "Name": "Ducks",
              },
              "id": "45873",
              "location": "Honda Center",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "10:30PM",
            },
          ]
    }
    scoreboard={
        Array [
            Object {
              "awayScore": "5",
              "awayShots": "20",
              "game": Object {
                "ID": "45865",
                "awayTeam": Object {
                  "Abbreviation": "PHI",
                  "City": "Philadelphia",
                  "ID": "6",
                  "Name": "Flyers",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "PIT",
                  "City": "Pittsburgh",
                  "ID": "10",
                  "Name": "Penguins",
                },
                "location": "PPG Paints Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:00PM",
              },
              "homeScore": "1",
              "homeShots": "35",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "1",
                    "awayShots": "6",
                    "homeScore": "0",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "12",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "3",
                    "awayShots": "7",
                    "homeScore": "1",
                    "homeShots": "12",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "17",
              "game": Object {
                "ID": "45887",
                "awayTeam": Object {
                  "Abbreviation": "MIN",
                  "City": "Minnesota",
                  "ID": "25",
                  "Name": "Wild",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "WPJ",
                  "City": "Winnipeg",
                  "ID": "2",
                  "Name": "Jets",
                },
                "location": "Bell MTS Place",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:30PM",
              },
              "homeScore": "4",
              "homeShots": "44",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "9",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "1",
                    "awayShots": "3",
                    "homeScore": "3",
                    "homeShots": "17",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "30",
              "game": Object {
                "ID": "45872",
                "awayTeam": Object {
                  "Abbreviation": "LAK",
                  "City": "Los Angeles",
                  "ID": "28",
                  "Name": "Kings",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "VGK",
                  "City": "Vegas",
                  "ID": "142",
                  "Name": "Golden Knights",
                },
                "location": "T-Mobile Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "10:00PM",
              },
              "homeScore": "2",
              "homeShots": "56",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "0",
                    "awayShots": "8",
                    "homeScore": "0",
                    "homeShots": "9",
                  },
                  Object {
                    "@number": "4",
                    "awayScore": "0",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "5",
                    "awayScore": "0",
                    "awayShots": "3",
                    "homeScore": "1",
                    "homeShots": "9",
                  },
                ],
              },
            },
          ]
    }
    setDate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <section>
          <img
                    alt="loading"
                    className="loading-gif"
                    src="blue_loading.gif"
          />
</section>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <img
            alt="loading"
            className="loading-gif"
            src="blue_loading.gif"
/>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "loading",
            "className": "loading-gif",
            "src": "blue_loading.gif",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": "section",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <section>
            <img
                        alt="loading"
                        className="loading-gif"
                        src="blue_loading.gif"
            />
</section>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="loading"
              className="loading-gif"
              src="blue_loading.gif"
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "loading",
              "className": "loading-gif",
              "src": "blue_loading.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "section",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Day Day container should not display scoreboard if there are no games on day 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Day
    addSchedule={[Function]}
    addScoreboard={[Function]}
    date="2018-04-09"
    schedule={
        Array [
            Object {
              "awayTeam": Object {
                "Abbreviation": "COL",
                "City": "Colorado",
                "ID": "22",
                "Name": "Avalanche",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "NSH",
                "City": "Nashville",
                "ID": "18",
                "Name": "Predators",
              },
              "id": "45866",
              "location": "Bridgestone Arena",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "3:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "NJD",
                "City": "New Jersey",
                "ID": "7",
                "Name": "Devils",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "TBL",
                "City": "Tampa Bay",
                "ID": "1",
                "Name": "Lightning",
              },
              "id": "45875",
              "location": "Amalie Arena",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "3:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "TOR",
                "City": "Toronto",
                "ID": "12",
                "Name": "Maple Leafs",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "BOS",
                "City": "Boston",
                "ID": "11",
                "Name": "Bruins",
              },
              "id": "45874",
              "location": "TD Garden",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "8:00PM",
            },
            Object {
              "awayTeam": Object {
                "Abbreviation": "SJS",
                "City": "San Jose",
                "ID": "26",
                "Name": "Sharks",
              },
              "date": "2018-04-14",
              "delayedOrPostponedReason": null,
              "homeTeam": Object {
                "Abbreviation": "ANA",
                "City": "Anaheim",
                "ID": "29",
                "Name": "Ducks",
              },
              "id": "45873",
              "location": "Honda Center",
              "originalDate": null,
              "originalTime": null,
              "scheduleStatus": "Normal",
              "time": "10:30PM",
            },
          ]
    }
    scoreboard={
        Array [
            Object {
              "awayScore": "5",
              "awayShots": "20",
              "game": Object {
                "ID": "45865",
                "awayTeam": Object {
                  "Abbreviation": "PHI",
                  "City": "Philadelphia",
                  "ID": "6",
                  "Name": "Flyers",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "PIT",
                  "City": "Pittsburgh",
                  "ID": "10",
                  "Name": "Penguins",
                },
                "location": "PPG Paints Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:00PM",
              },
              "homeScore": "1",
              "homeShots": "35",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "1",
                    "awayShots": "6",
                    "homeScore": "0",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "12",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "3",
                    "awayShots": "7",
                    "homeScore": "1",
                    "homeShots": "12",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "17",
              "game": Object {
                "ID": "45887",
                "awayTeam": Object {
                  "Abbreviation": "MIN",
                  "City": "Minnesota",
                  "ID": "25",
                  "Name": "Wild",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "WPJ",
                  "City": "Winnipeg",
                  "ID": "2",
                  "Name": "Jets",
                },
                "location": "Bell MTS Place",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "7:30PM",
              },
              "homeScore": "4",
              "homeShots": "44",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "9",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "1",
                    "awayShots": "3",
                    "homeScore": "3",
                    "homeShots": "17",
                  },
                ],
              },
            },
            Object {
              "awayScore": "1",
              "awayShots": "30",
              "game": Object {
                "ID": "45872",
                "awayTeam": Object {
                  "Abbreviation": "LAK",
                  "City": "Los Angeles",
                  "ID": "28",
                  "Name": "Kings",
                },
                "date": "2018-04-13",
                "delayedOrPostponedReason": null,
                "homeTeam": Object {
                  "Abbreviation": "VGK",
                  "City": "Vegas",
                  "ID": "142",
                  "Name": "Golden Knights",
                },
                "location": "T-Mobile Arena",
                "originalDate": null,
                "originalTime": null,
                "scheduleStatus": "Normal",
                "time": "10:00PM",
              },
              "homeScore": "2",
              "homeShots": "56",
              "isCompleted": "true",
              "isInProgress": "false",
              "isUnplayed": "false",
              "periodSummary": Object {
                "period": Array [
                  Object {
                    "@number": "1",
                    "awayScore": "0",
                    "awayShots": "5",
                    "homeScore": "1",
                    "homeShots": "11",
                  },
                  Object {
                    "@number": "2",
                    "awayScore": "1",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "14",
                  },
                  Object {
                    "@number": "3",
                    "awayScore": "0",
                    "awayShots": "8",
                    "homeScore": "0",
                    "homeShots": "9",
                  },
                  Object {
                    "@number": "4",
                    "awayScore": "0",
                    "awayShots": "7",
                    "homeScore": "0",
                    "homeShots": "13",
                  },
                  Object {
                    "@number": "5",
                    "awayScore": "0",
                    "awayShots": "3",
                    "homeScore": "1",
                    "homeShots": "9",
                  },
                ],
              },
            },
          ]
    }
    setDate={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <section>
          <img
                    alt="loading"
                    className="loading-gif"
                    src="blue_loading.gif"
          />
</section>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <img
            alt="loading"
            className="loading-gif"
            src="blue_loading.gif"
/>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "loading",
            "className": "loading-gif",
            "src": "blue_loading.gif",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": "section",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <section>
            <img
                        alt="loading"
                        className="loading-gif"
                        src="blue_loading.gif"
            />
</section>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="loading"
              className="loading-gif"
              src="blue_loading.gif"
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "loading",
              "className": "loading-gif",
              "src": "blue_loading.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "section",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
